10-auth/authelia/backing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-db
  namespace: auth
  labels:
    app: authelia-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: authelia-db
  template:
    metadata:
      labels:
        app: authelia-db
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: authelia-db
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-db
  namespace: auth
spec:
  selector:
    app: authelia-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-redis
  namespace: auth
  labels:
    app: authelia-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia-redis
  template:
    metadata:
      labels:
        app: authelia-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-redis
  namespace: auth
spec:
  selector:
    app: authelia-redis
  ports:
    - port: 6379
      targetPort: 6379
