10-auth/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: auth
  labels:
    app: authelia
spec:
  selector:
    app: authelia
  ports:
    - name: http
      port: 80
      targetPort: 9091
